--- a/frontend/src/Styles/mixes.css
+++ b/frontend/src/Styles/mixes.css
@@ -4,14 +4,16 @@
     grid-template-rows: 33% 25% 33%;
 }
 
-#transportVolumeContainer {
+#transportVolumeContainerMixes {
     grid-column: 2 / 3;
     grid-row: 3 / 4;
+    display: flex;
 }
 
-#transportVolumeContainer label {
+#transportVolumeContainerMixes label {
     position: relative;
-    top: 7px;
+    top: 9px;
+    /* margin-right: 5px; */
 }
 
 #timer {
@@ -100,4 +102,40 @@
     height: -moz-calc(100% - 125px);
     height: -webkit-calc(100% - 125px);
     /* height: 500px; */
+}
+
+/* Sliders */
+
+#volumeMixes {
+    -webkit-appearance: none;
+    width: 95%;
+    margin: auto;
+    margin-bottom: 10px;
+    height: 15px;
+    background: #000;
+    background: linear-gradient(to right, rgb(33, 24, 152), rgb(76, 59, 172));
+    outline: none;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 8px;
+}
+
+/* for chrome/safari */
+#volumeMixes::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 5px;
+    height: 10px;
+    background: #000;
+    cursor: pointer;
+    border: 5px solid rgb(21, 252, 0);
+    border-radius: 4px;
+}
+
+#volumeMixes::-moz-range-thumb {
+    width: 20px;
+    height: 60px;
+    background: #000;
+    cursor: pointer;
+    border: 5px solid lawngreen;
+    border-radius: 4px;
 }
